fix last changes

--- a/app/views/modal-templates/advice-1.html
+++ b/app/views/modal-templates/advice-1.html
@@ -4,20 +4,22 @@
   <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
       <p class="advice-modal-content-text">
-        Antes comenzar a pintar es importante saber que las pinturas son productos de “terminación”, es decir son para protección y decorativas. Así, resultan el último paso en la puesta a punto del elemento a pintar (por ejemplo una pared, una madera, una reja, un caño, etc). Por ello y a fin de que el producto se destaque correctamente, es indispensable que la superficie a pintar se encuentre en buenas condiciones. Además, tenga en cuenta los siguientes consejos:
+        Antes de comenzar a pintar es importante saber que  las pinturas son productos   para proteger y decorar. Así, resultan el último paso en la puesta a punto de la superficie a pintar (por ejemplo una pared, una madera, una reja, un caño, etc.). Por eso es indispensable que esta superficie se encuentre en buenas condiciones. Es importante seguir los siguientes  consejos:
       </p>
     </div>
 
     <div class="modal-content-paragraph">
       <span class="waring-icon"></span>
       <p class="advice-modal-content-text">
-        <i class="fa fa-exclamation-circle" aria-hidden="true"></i> Inspeccione las superficies para determinar los defectos que existen y las herramientas que se necesitan para solucionarlos. Asimismo, descubra qué tipo de terminación se ha utilizado previamente para así seleccionar la correcta imprimación o sellador.
+        <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+        Inspeccione las superficies para ver los defectos que existen, y determine las herramientas y productos que se necesitan para realizar el trabajo.
       </p>
     </div>
 
     <div class="modal-content-paragraph">
       <div class="advice-modal-content-text">
-        <i class="fa fa-exclamation-circle" aria-hidden="true"></i>  Libere el acceso a las superficies a pintar. Saque clavos, fotos, cortinas, ganchos, etc. Ubique los muebles en el centro de la habitación y cúbralos con una lona.
+        <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+        Libere el acceso a las superficies a pintar. Por ejemplo, tratándose de ambientes hogareños saque clavos, cuadros, cortinas, ganchos, etc. Ubique los muebles en el centro de la habitación y cúbralos con una lona.
       </div>
     </div>
   </div>
@@ -31,7 +33,8 @@
 
     <div class="modal-content-paragraph">
       <p class="advice-modal-content-text">
-        <i class="fa fa-exclamation-circle" aria-hidden="true"></i> La superficie debe estar limpia, seca y libre de cualquier suciedad. Por lo tanto,  lave las paredes eliminando  todo resto de grasa, polvo o manchas.
+        <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+        La superficie a tratar debe estar limpia, seca, y libre de cualquier suciedad, grasitud o restos de  pinturas anteriores flojas o descascaradas.
       </p>
     </div>
 
