--- a/app/views/modal-templates/advice-4.html
+++ b/app/views/modal-templates/advice-4.html
@@ -2,24 +2,17 @@
   <h3 class="modal-content-title">Mantenimiento</h3>
 
   <div class="modal-content-paragraph">
-    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> Si bien las pinturas secan rápido,  tomará aproximadamente una semana para que sequen totalmente. Por ello, <b>las superficies pintadas no deben ser lavadas antes del citado tiempo</b>. Se recomienda dejar pasar 3 semanas de concluido el trabajo.
+<b>Paredes</b> Muchas veces nos encontramos con paredes pintadas pero sucias. Estas se pueden limpiar con un trapo con agua y un poco de detergente. Nunca emplear productos abrasivos. Esta limpieza  es factible cuando empleamos pinturas que son lavables, característica generalmente  indicada en la lata. Recordemos que la  lavabilidad se adquiere normalmente después de 3 semanas de haber pintado, ya que en ese periodo se logra un cierre total de la película.
   </div>
 
   <div class="modal-content-paragraph">
-    Para limpiar las paredes y los techos de toda suciedad, marcas de desgaste, polvo, etc. deberá seguir  los siguientes tres pasos:
+    <b>Metales ferrosos</b> es conveniente revisar periódicamente para ver si hay  raspones que lleguen hasta el metal. De ser así, es  necesario pintar nuevamente esa área para evitar que prospere el óxido.
   </div>
+<div class="modal-content-paragraph">
+  <b>Techos o terrazas pintadas con membranas en pasta o impermeabilizantes</b> revise periódicamente para detectar rajaduras o filtraciones. Es conveniente aplicar una mano de producto en las zonas afectadas para evitar daños mayores.
+</div>
+<div class="modal-content-paragraph">
+<b>Maderas</b> tienen que ser revisadas periódicamente para detectar envejecimientos prematuros de la pintura como consecuencia de su exposición a los efectos nocivos del sol, lluvia, viento o nieve.
+</div>
 
-  <ul class="advice-modal-list">
-    <li class="advice-modal-list-item">
-      1. Nunca emplee sustancias abrasivas, tales como preparados cáusticos, ya que pueden pulir la superficie. Además, no utilice cepillos duros.
-    </li>
-
-    <li class="advice-modal-list-item">
-      2. Utilice una solución de agua tibia limpia con detergente mediante un paño suave. En caso de que la mancha resulte difícil de limpiar, emplee un cepillo de cerdas suaves.
-    </li>
-
-    <li class="advice-modal-list-item">
-      3. Finalmente, enjuague el área limpiada y deje secar.
-    </li>
-  </ul>
 </div>
