--- a/app/views/modal-templates/advice-5.html
+++ b/app/views/modal-templates/advice-5.html
@@ -2,14 +2,14 @@
   <h3 class="modal-content-title">Problemas comunes de la pintura</h3>
 
   <div class="modal-content-paragraph">
-    A continuación detallaremos algunos de los problemas más comunes a resolver antes de pintar:
+    A continuación detallamos algunos de los inconvenientes que nos encontramos cuando pintamos y las soluciones adecuadas.
   </div>
 
   <div class="advice-modal-content-section">
 
     <div class="modal-content-paragraph">
       <h4 class="modal-content-subtitle">Cuarteado:</h4>
-      <div class="advice-modal-content-text">¿QUÉ ES? Son quebraduras de la película de pintura.</div>
+      <div class="advice-modal-content-text">¿QUE ES? Son quebraduras de la película de pintura.</div>
     </div>
     <div class="imagen-representacion cuarteado"></div>
 
@@ -17,7 +17,7 @@
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
       <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
-          Múltiples capas de pinturas envejecidas que se debilitan y comienzan a quebrarse
+          Múltiples capas de pinturas envejecidas que se debilitan y comienzan a quebrarse.
         </li>
 
         <li class="advice-modal-list-item">
@@ -29,7 +29,7 @@
         </li>
 
         <li class="advice-modal-list-item">
-          Aplicación de un recubrimiento duro y rígido sobre un recubrimiento blando y flexible.
+Aplicación de un recubrimiento duro y rígido sobre una blando y flexible.
         </li>
 
         <li class="advice-modal-list-item">
@@ -37,8 +37,7 @@
         </li>
 
         <li class="advice-modal-list-item">
-          Aplicación de productos en condiciones de muy bajas temperaturas con presencia de clima ventoso, provocando que la pintura seque prematuramente.
-        </li>
+Aplicación de la pintura en condiciones climáticas inadecuadas. Por ejemplo, pintar en verano al medio día un techo de chapa  que está muy caliente. El diluyente de la pintura se evaporara antes que se logre el anclaje de la pintura a la chapa.        </li>
 
         <li class="advice-modal-list-item">
           Ausencia de fondos, cuando se aplica en forma directa un producto de terminación.
@@ -78,7 +77,7 @@
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
       <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
-          Presencia de humedad en la superficie pintada.
+Presencia de humedad en la superficie pintada y/o en el ambiente.
         </li>
 
         <li class="advice-modal-list-item">
@@ -113,7 +112,7 @@
     </div>
   </div>
 
-  <div class="advice-modal-content-section">
+  <!-- <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
       <h4 class="modal-content-subtitle">Tizado:</h4>
       <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la pintura, generalmente luego de una prolongada exposición a la intemperie.</div>
@@ -146,7 +145,7 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
 
   <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
