--- a/app/views/modal-templates/advice-7.html
+++ b/app/views/modal-templates/advice-7.html
@@ -9,13 +9,14 @@
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          <b>Rodillos de pelo corto</b> son mejores para las pinturas a base solvente. Resultan ideales para pinturas brillantes o para pintar sobre superficies lisas.
+          <b>Rodillos de pelo corto</b> Son mejores para las pinturas a base solvente. Ideales para pinturas brillantes, sintéticas y látex satinados, y para pintar superficies bien lisas.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Rodillo de pelo mediano</b> se utilizan para pinturas a base de agua.
+          <b>Rodillo de pelo mediano</b> Generalmente se utilizan con pinturas base agua.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Rodillos de pelo largo</b> son ideales para superficies rugosas o con textura. Se utiliza para aplicar revestimientos.
+          <b>Rodillos de pelo largo</b> Generalmente se utilizan en exteriores, en superficies rugosas o con cierta textura. Son apropiados para aplicar revestimientos.
+
         </li>
       </ul>
     </div>
@@ -25,27 +26,27 @@
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          <b>230 - 270mm</b> para las paredes, techos, suelos y caminos.
+          <b>230 - 270mm</b> para las paredes, techos, suelos y caminos. En ciertos casos se puede recurrir a rodillos más chicos para pintar rincones de una pared, cuando usar el grande resulta una incomodidad.
+
         </li>
         <li class="modal-content-tools-list-item">
-          <b>30 - 180mm</b> para grandes armarios, puertas y muebles
+          <b>30 - 180mm</b> para muebles grandes, puertas y paredes chicas.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>80 - 130mm</b> para los adornos, pequeñas superficies, hierro forjado y marcos.
+          <b>80 - 130mm</b> para adornos, pequeñas superficies, marcos o rincones.
+
         </li>
       </ul>
     </div>
     <div class="modal-content-paragraph">
       <div class="advice-modal-content-text">
-        ¿Cómo preparar los rodillos?
+        Preparación de los rodillos
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          <b>Para pinturas base agua</b> girar el rodillo para eliminar el polvo. Luego enjuagar con agua para eliminar las fibras sueltas.
+          Eliminar vestigios de polvo y fibras sueltas.  Enjuagar los rodillos con agua o aguarrás, para pinturas al agua o sintéticas respectivamente.
         </li>
-        <li class="modal-content-tools-list-item">
-          <b>Para pinturas base solvente</b> enjuagar el rodillo en aguarrás mineral, girar y dejar secar.
-        </li>
+
       </ul>
     </div>
   </div>
@@ -54,20 +55,22 @@
     <h4 class="modal-content-subtitle"><i class="icon-art"></i> Pinceles</h4>
     <div class="modal-content-paragraph">
       <div class="advice-modal-content-text">
-        ¿Cómo elegir el tamaño correcto de pincel?
+        ¿Cómo elegir el pincel adecuado?
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          <b>Pinceles de 100 mm o más ancho</b> son ideales para grandes superficies tales como paredes, techos, suelos, chimeneas, tejas, embarcaciones y piscinas. Este tipo de pinceles pueden cargar una gran cantidad de pintura, por lo que probablemente resulten ser pesados para un usuario inexperto.
+          Al elegir un pincel, hay que tomar en cuenta 3 aspectos: tipo de cerda, número de virola y el ancho del pincel.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Pinceles de 65 - 75 mm</b> son adecuados para medianas y grandes áreas como armarios, suelos, escaleras,  puertas, zócalos, grandes tuberías, vallas y mobiliario de exterior.
+          <b>Tipo de Cerda</b> El tipo de cerda puede ser natural o sintética, siendo las denominadas “cerdas chinas” las más apreciadas. En los últimos tiempos han hecho su aparición cerdas sintéticas de muy alta calidad y de uso específico para cada tipo de pintura.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Pinceles de 38 - 50mm</b> son los mejores para trabajos pequeños a medianos tales como puertas, mesas, armarios, muebles, pequeños paneles, marcos de ventanas, molduras, persianas, pergolas y herramientas de jardinería.
+          <b>Número de virola</b> El número de virola (1, 2, 3 y 4) determina el espesor del mismo. Esta es importante ya que nos indica la  capacidad de carga de pintura en el pincel. Cuanto mayor es el número, mayor la capacidad de carga de pintura. Para los Látex se utiliza por lo general virola N°3 y N°4, y para los sintéticos y barnices, virola N° 1 y N°2. La virola N° 1 es aconsejable para trabajos muy delicados, aplicación de lasures, barnices, y tareas  que requieran una mayor perfección  de aplicación.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Pinceles de 12 - 25 mm</b> son ideales para muy pequeños trabajos, donde resulta difícil llegar a las áreas a pintar. Asimismo, son buenos para juguetes, sillas, etc.
+          <b>Ancho del pincel</b> El ancho del pincel va de 12mm a 125mm. En líneas generales, la elección del ancho del  mismo tiene que ver con la superficie a pintar, el grado de detalle en el trabajo  a realizar y la habilidad del  aplicador. A título de ejemplo, para pintar puertas, marcos y ventanas, se utilizara un pincel de ancho intermedio, rejas, celosías, cenefas, etc. requieren el empleo de medidas menores.<br/>
+          Las pinceletas (pinceles bien anchos) de 125mm y virolas N°3 o N° 4, en general se usan para látex, en vez de rodillos. También para aplicar fijador o fondo blanco, que no son productos de terminación.
+
         </li>
       </ul>
     </div>
@@ -77,18 +80,32 @@
     <h4 class="modal-content-subtitle"><i class="icon-hygiene"></i> Lijas</h4>
     <div class="modal-content-paragraph">
       <div class="advice-modal-content-text">
-        ¿Para qué se usa cada tipo de lija?
+      <b>IMPORTANTE:</b> En todo tipo de lija, el número más bajo de grano (cantidad de granos por centímetro cuadrado) significa un alto grado de abrasión.
+<br/>
+        Hay distintos tipos de lijas. Estas se dividen en:
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          <b>Grano Fino</b> se utilizan para lijar paredes con enduido, paredes ya pintadas o maderas sin pintar.
+          <b>Al agua</b> Se usan sobre maderas y trabajos de enduido. Vienen con un grano de 80 a 600.  Estas lijas al agua, en el mercado, se comercializan en color negro.
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Grano Mediano</b> se emplean para emparejar maderas ya pintadas.
+        <b>Para madera</b> Se usan especialmente sobre maderas. Vienen con un grano de 36 a 220. En el mercado se comercializan en color rojo.
+
         </li>
         <li class="modal-content-tools-list-item">
-          <b>Grano Grueso</b> se utilizan para lijar hierros y metales.
+          <b>Anti-empaste</b> Se usan en madera, metales y masillas aplicadas sobre placas de yeso. Vienen con un grano de  80 a 600. Se comercializan en color blanco.
         </li>
+        <li class="modal-content-tools-list-item">
+          <b>Tela esmeril</b> Se usan sobre metales. Vienen con un grano de 24 a 600. Se comercializan en color negro, sobre un soporte de tela.
+        </li>
+        <li>
+
+        Un buen trabajo de lijado y pulido se realiza iniciando el mismo con una lija más gruesa para continuar con otra más fina (esta última con mayor cantidad de granos por cm2).
+        </li>
+        <li>
+          Recomendamos no excederse con la elección en el poder de abrasión de la lija,  para evitar daños  sobre la superficie que estamos trabajando. En líneas generales, una opción de grano medio es la mejor elección para evitar estas posibles ralladuras.
+        </li>
+
       </ul>
     </div>
   </div>
