--- a/app/views/modal-templates/inspiration-1.html
+++ b/app/views/modal-templates/inspiration-1.html
@@ -67,8 +67,7 @@
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Colores oscuros para destacar detalles</p>
       <p class="inspiration-modal-content-text">
-        Los colores oscuros/intensos  harán que tu casa parezca más pequeña, pero atraerán más atención.
-      </p>
+Los colores oscuros harán que tu casa parezca más pequeña, pero atraerán más atención a los detalles.      </p>
       <div class="inspiracion-representacion oscuros"></div>
     </div>
   </div>
