--- a/app/views/product-index.html
+++ b/app/views/product-index.html
@@ -11,7 +11,7 @@
   <div class="main-section-content">
     <div class="layout">
       <div class="product-index-section-content">
-        <h4 class="product-index-section-content-title">Encontrá todo lo que necesitas.</h4>
+        <h4 class="product-index-section-content-title">Encontrá todo lo que necesitas</h4>
 
         <div class="product-list-wrapper">
           <div class="loader" ng-hide="productsLoaded"></div>
