--- a/styles/less/products.less
+++ b/styles/less/products.less
@@ -387,8 +387,8 @@ font-size: 12px;}
   font-weight: 600;
 }
 
-.product-technical-info-field-value {
-  text-transform: capitalize;
+.product-technical-info-field p:first-letter {
+  text-transform: uppercase !important;
 }
 
 .product-extra-info-items-wrapper {
@@ -457,5 +457,5 @@ font-size: 12px;}
 }
 
 .product-photo-image {
-  max-height: 200px;
+  max-height: 260px;
 }
