--- a/app/views/modal-templates/advice-2.html
+++ b/app/views/modal-templates/advice-2.html
@@ -6,15 +6,15 @@
       <span class="waring-icon"></span>
       <p class="advice-modal-content-text"><i class="fa fa-check-circle-o" aria-hidden="true"></i><b>Qué Hacer:</b></p>
       <ul class="advice-modal-list">
-        <li>1. Asegúrese de que la superficie esté limpia y seca.</li>
-        <li>2. Elimine los pelos sueltos de los pinceles.</li>
-        <li>3. Preste atención a las instrucciones de aplicación dispuestas en la lata de pintura.</li>
+        <li>1. Es muy importante que la superficie este limpia y seca.</li>
+        <li>2. Preste siempre atención a las características y recomendaciones de los productos que va a aplicar.</li>
+        <li>3. Si va a utilizar pinceles, elimine los pelos sueltos de los mismos. Cargue el pincel de manera uniforme por inmersión hasta la mitad de  sus cerdas. Luego escurra el pincel contra el borde superior de la lata a fin de eliminar excesos de pintura.
+</li>
         <li>
-          4. Cargue el pincel de manera  uniforme por inmersión sólo hasta la mitad de sus cerdas. Luego golpéelo contra el borde superior de la misma a fin de eliminar cualquier exceso.
+          4. Aplique la pintura de manera uniforme con trazos suaves y cortos.
         </li>
-        <li>5. Aplique la pintura de manera uniforme y complemente con trazos suaves y cortos.</li>
-        <li>6. Pinte desde la superficie superior hacia la parte inferior.</li>
-        <li>7. En caso de pintar madera con lasures o barnices, deberá aplicar el pincel en la dirección de la vetas.</li>
+        <li>5. En caso de pintar maderas con lasures o barnices, haga correr el pincel en el sentido de las vetas de la madera.</li>
+        <li>6.Pinte siempre las superficies empezando por la parte superior de las mismas.</li>
       </ul>
     </div>
   </div>
@@ -24,11 +24,14 @@
       <span class="waring-icon"></span>
       <p class="advice-modal-content-text"><i class="fa fa-times-circle-o" aria-hidden="true"></i><b>Qué no Hacer:</b></p>
       <ul class="advice-modal-list">
-        <li>1. No mezcle la pintura con un pincel, use un palo plano u otro elemento similar.</li>
+        <li>1. No dejar  rodillos o pinceles en remojo  en agua o aguarrás después de utilizarlos  por periodos prolongados, ya que los mismos se flexibilizaran  arruinándose.</li>
         <li>
-          2. No deje pinceles en remojo en agua, solvente o pintura por períodos prolongados de tiempo, ya que los mismos se flexibilizaran en exceso.
+          2. No mezclar la pintura en la lata con pinceles o palos redondos. Utilice un palo plano o elemento similar.
         </li>
-        <li>3. No utilice un pincel grande para pintar  elementos  pequeños o  estrechos, ya que  sobrecargara de material la superficie a pintar.</li>
+        <li>3. No usar pinceles grandes para pintar elementos pequeños o estrechos, ya que se  sobrecargara  de pintura  la superficie, arruinando el trabajo de terminación.</li>
+        <li>
+          4. Trabajar en ambientes totalmente cerrados.
+        </li>
       </ul>
     </div>
   </div>
