--- a/app/views/modal-templates/advice-6.html
+++ b/app/views/modal-templates/advice-6.html
@@ -2,51 +2,66 @@
   <h3 class="modal-content-title">Aplicación</h3>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">1. Rellenar</h4>
+    <h4 class="modal-content-subtitle">Limpiar</h4>
     <div class="advice-modal-content-text">
-      Las superficies dañadas pueden requerir ser rellenadas con Enduido Plástico al Agua Prima Facie° y luego lijadas, a fin de  proporcionar una superficie lisa y uniforme.
+      Tenga en cuenta  que la superficie a pintar debe estar siempre seca, limpia y libre de cualquier suciedad. Por lo tanto elimine todo resto de polvo, grasitud , manchas, etc. Si no da este primer paso no se lograra un buen anclaje de la pintura sobre la superficie a pintar.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">2. Limpiar</h4>
+    <h4 class="modal-content-subtitle">Rellenar</h4>
     <div class="advice-modal-content-text">
-      La superficie debe estar limpia, seca y libre de cualquier suciedad. Por lo tanto, limpie la superficie eliminando todo resto de polvo, grasitud, manchas, etc.
+      Recuerde también que hay que pintar superficies lisas y uniformes. Por ello, rellene estas  con enduido plástico o masillas para madera, según el caso, a fin de lograr una superficie  en condiciones  para pintar.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">3. Mezclar</h4>
+    <h4 class="modal-content-subtitle">Preparación de la Pintura</h4>
     <div class="advice-modal-content-text">
-      La adecuada mezcla, antes del uso, es esencial para la consistencia del color correcto. Revuelva circularmente con alternancia de sentidos, usando una paleta plana hasta que los contenidos sean uniformes. Continúe agitando en intervalos regulares durante la aplicación.
+      Antes de comenzar a pintar hay que revolver bien el contenido de  la lata. Con esto se logra uniformar bien la pintura, y sobre todo cuando se trata de colores ya preparados. Los pigmentos generalmente se depositan en el fondo de la lata, y hay que incorporarlos totalmente a la pintura para lograr una aplicación uniforme de la misma. Para ello, es necesario revolver bien el contenido de la lata con una paleta o elemento plano, con movimientos circulares y en forma ascendente para lograr incorporar el material que se encuentre en el fondo de la misma. Nunca usar un palo redondo ya que no se lograra cumplimentar el objetivo.
+    </div>
+  </div>
+  <div class="modal-content-paragraph">
+    <h4 class="modal-content-subtitle">Protección personal</h4>
+    <div class="advice-modal-content-text">
+      Asegúrese que el área  este bien ventilada. Use ropa adecuada, guantes descartables y un barbijo mientras este lijando. También es recomendable un barbijo cuando este aplicando pinturas  base solvente en espacios de escasa ventilación.
+    </div>
+  </div>
+  <div class="modal-content-paragraph">
+    <h4 class="modal-content-subtitle">Clima</h4>
+    <div class="advice-modal-content-text">
+      Los días cálidos,  secos y con poco rocío resultan las mejores condiciones climáticas para pintar. Si por necesidad tuviera que pintar bajo condiciones de humedad, la calefacción y una buena ventilación ayuda al secado de la pintura. Evite pintar cuando la temperatura este por debajo de 5°C o por encima de 40°C. Si por ejemplo está pintando un techo de chapa en verano, haga el trabajo bien temprano en la mañana y a la tardecita. Cuando el sol esta alto, la chapa levanta mucha temperatura, y esta no permite el anclaje de la pintura.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">4. Pintar</h4>
+    <h4 class="modal-content-subtitle">¿Cómo pintar?</h4>
     <div class="advice-modal-content-text">
-      Normalmente se debe pintar de arriba hacia abajo.
-    </div>
+Estos son algunos consejos que pueden simplificar el trabajo de pintar.    </div>
     <div class="advice-modal-content-text">
-      <i class="fa fa-info" aria-hidden="true"></i> Orden de pintado para superficies <b>interiores</b>:
+      <i class="fa fa-info" aria-hidden="true"></i> Interiores. Orden de pintado:
     </div>
     <ul class="advice-modal-list">
-      <li>Primera mano de techo.</li>
-      <li>Primera mano de paredes. </li>
-      <li>Segunda mano techo.</li>
-      <li>Segunda mano paredes.</li>
+      <li>1. Empiece pintando el cielorraso.</li>
+      <li>2. De una primera mano a las paredes</li>
+      <li>3. Segunda mano al cielorraso.</li>
+      <li>4. Segunda mano a las paredes.</li>
+      <li>
+        5. Luego pinte las aberturas.
+      </li>
     </ul>
 
     <div class="advice-modal-content-text">
-    <i class="fa fa-info" aria-hidden="true"></i>Orden de pintado para superficies <b>exteriores</b>:
+    <i class="fa fa-info" aria-hidden="true"></i>Exteriores. Orden de pintado:
     </div>
 
     <ul class="advice-modal-list">
-      <li>Techo</li>
-      <li>Balcones</li>
-      <li>Paredes</li>
-      <li>Canaletas y Bajantes</li>
-      <li>Puertas y Ventanas</li>
+      <li>1. Empiece por los techos.</li>
+      <li>2. Balcones y Paredes.
+</li>
+      <li>3. Canaletas y Bajantes.
+</li>
+      <li>4. Aberturas</li>
     </ul>
   </div>
 
