--- a/styles/less/footer.less
+++ b/styles/less/footer.less
@@ -55,18 +55,18 @@
 }
 
 .footer-title {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 700;
   margin: 0;
   padding: 0;
-  line-height: 16px; 
-  
+  line-height: 20px;
+
 }
 
 .footer-text {
-  font-size: 8px;
-  line-height: 12px;
-  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 18px;
+//  text-transform: uppercase;
 
-  
+
 }
