--- a/app/views/modal-templates/inspiration-1.html
+++ b/app/views/modal-templates/inspiration-1.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Inspirarse con la Naturaleza</p>
       <p class="inspiration-modal-content-text">
@@ -32,7 +32,7 @@
       <div class="inspiracion-representacion naturaleza"></div>
     </div>
   </div>
-    <div class="col-xs-6">
+    <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Los colores de las casas de tus vecinos</p>
       <p class="inspiration-modal-content-text">
@@ -43,7 +43,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">El color del techo</p>
       <p class="inspiration-modal-content-text">
@@ -52,7 +52,7 @@
       <div class="inspiracion-representacion techo"></div>
     </div>
   </div>
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Luz para agrandar el tamaño de tu casa</p>
       <p class="inspiration-modal-content-text">
@@ -63,7 +63,7 @@
   </div>
 </div>
   <div class="row">
-    <div class="col-xs-6">
+    <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Colores oscuros para destacar detalles</p>
       <p class="inspiration-modal-content-text">
@@ -71,7 +71,7 @@ Los colores oscuros harán que tu casa parezca más pequeña, pero atraerán má
       <div class="inspiracion-representacion oscuros"></div>
     </div>
   </div>
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Los colores del interior de tu casa</p>
       <p class="inspiration-modal-content-text">
@@ -82,7 +82,7 @@ Los colores oscuros harán que tu casa parezca más pequeña, pero atraerán má
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Cantidad de colores</p>
       <p class="inspiration-modal-content-text">
@@ -91,7 +91,7 @@ Los colores oscuros harán que tu casa parezca más pequeña, pero atraerán má
       <div class="inspiracion-representacion cantidad"></div>
     </div>
   </div>
-<div class="col-xs-6">
+<div class="col-sm-6">
     <div class="modal-content-paragraph">
       <p class="inspiration-modal-content-subtitle">Familias de colores</p>
       <p class="inspiration-modal-content-text">
