--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -54,9 +54,11 @@ h1 {
   margin: 0;
   text-align: center;
   text-transform: uppercase;
-
-  @media @small-screen {
+  @media @medium-screen {
     font-size: 40px;
+  }
+  @media @small-screen {
+    font-size: 20px;
   }
 }
 
