--- a/styles/less/footer.less
+++ b/styles/less/footer.less
@@ -16,6 +16,9 @@
   background-color: @c_yellow_01;
   display: flex;
   justify-content: center;
+  @media @medium-screen {
+  padding: 0 5%;
+  }
 }
 
 .footer-content {
