--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -30,6 +30,9 @@ section {
   margin: 0 auto;
   max-width: @viewport_width;
   width: 100%;
+    @media @medium-screen {
+      width: 96%;
+    }
 }
 
 .initiallyHidden {
