--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -13,8 +13,9 @@
   max-height: 100%;
   width: 100%;
 
-  @media @small-screen {
-    height: 500px;
+  @media @medium-screen {
+    min-height: 50%;
+    max-height: 50%;
   }
 
   .layout {
@@ -36,13 +37,11 @@
     color: @c_white;
     line-height: 121px;
     margin: 0 40px;
-
-
-
-
-
-    @media @small-screen {
+    @media @medium-screen {
       line-height: 50px;
+    }
+    @media @small-screen {
+      line-height: 30px;
     }
   }
 }
