--- a/styles/less/inspiration.less
+++ b/styles/less/inspiration.less
@@ -19,8 +19,11 @@
     color: @c_white;
     line-height: 121px;
 
-    @media @small-screen {
+    @media @medium-screen {
       line-height: 50px;
+    }
+    @media @small-screen {
+      line-height: 30px;
     }
   }
 
@@ -37,6 +40,10 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 48px 0;
+  @media @medium-screen {
+    flex-direction: column;
+    margin: 0 0;
+  }
 
   @media @small-screen {
     padding: 0;
