--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -20,11 +20,14 @@
   margin-bottom: 24px;
   padding: 24px;
   width: 100%;
-
+@media @medium-screen {
+  height: 160px;
+  padding: 12px;
+}
   @media @small-screen {
-    height: 160px;
+    height: 120px;
     margin: 0;
-    padding: 12px;
+
   }
 
   .layout {
