--- a/styles/less/buttons.less
+++ b/styles/less/buttons.less
@@ -1,6 +1,5 @@
 @import 'blocks.less';
 @import 'colors.less';
-
 .main-button {
   background-color: @c_blue_01;
   border: 4px solid @c_white;
@@ -68,12 +67,17 @@
   align-items: center;
   display: inline-flex;
   padding: 12px 36px;
-  
+
+  @media @medium-screen {
+    padding: 8px 24px;
+    font-size: 16px;
+  }
   @media @small-screen {
-    padding: 12px 24px;
+    flex-grow: 1;
+
   }
 
-  .icon-calculadora {
+  .icon-calculadora, .icon-consejo {
     font-size: 34px;
     vertical-align: middle;
 
@@ -96,6 +100,9 @@
   line-height: 26px;
   padding: 12px 48px;
   text-transform: uppercase;
+  @media @medium-screen {
+    padding: 6px 20px;
+  }
 }
 
 .back-button {
@@ -105,6 +112,9 @@
   line-height: 26px;
   padding: 12px 48px;
   text-transform: uppercase;
+  @media @medium-screen {
+    padding: 6px 20px;
+  }
 
   i {
     margin-right: 24px;
@@ -121,10 +131,11 @@
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
-  
+  @media @medium-screen {
+    padding: 6px 20px;
+  }
   @media @small-screen {
     font-size: 12px;
-    padding: 12px 24px;
   }
 
   &:hover {
