--- a/app/views/modal-templates/advice-5.html
+++ b/app/views/modal-templates/advice-5.html
@@ -29,7 +29,7 @@
         </li>
 
         <li class="advice-modal-list-item">
-Aplicación de un recubrimiento duro y rígido sobre una blando y flexible.
+Aplicación de un recubrimiento duro y rígido sobre uno blando y flexible.
         </li>
 
         <li class="advice-modal-list-item">
