--- a/app/views/modal-templates/advice-6.html
+++ b/app/views/modal-templates/advice-6.html
@@ -30,7 +30,7 @@
   <div class="modal-content-paragraph">
     <h4 class="modal-content-subtitle">Clima</h4>
     <div class="advice-modal-content-text">
-      Los días cálidos,  secos y con poco rocío resultan las mejores condiciones climáticas para pintar. Si por necesidad tuviera que pintar bajo condiciones de humedad, la calefacción y una buena ventilación ayuda al secado de la pintura. Evite pintar cuando la temperatura este por debajo de 5°C o por encima de 40°C. Si por ejemplo está pintando un techo de chapa en verano, haga el trabajo bien temprano en la mañana y a la tardecita. Cuando el sol esta alto, la chapa levanta mucha temperatura, y esta no permite el anclaje de la pintura.
+      Los días cálidos,  secos y con poco rocío resultan las mejores condiciones climáticas para pintar. Si por necesidad tuviera que pintar bajo condiciones de humedad, la calefacción y una buena ventilación ayudan al secado de la pintura. Evite pintar cuando la temperatura este por debajo de 5°C o por encima de 40°C. Si por ejemplo está pintando un techo de chapa en verano, haga el trabajo bien temprano en la mañana y a la tardecita. Cuando el sol esta alto, la chapa levanta mucha temperatura, y esta no permite el anclaje de la pintura.
     </div>
   </div>
 
@@ -64,18 +64,3 @@ Estos son algunos consejos que pueden simplificar el trabajo de pintar.    </div
       <li>4. Aberturas</li>
     </ul>
   </div>
-
-  <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">5. Proteger</h4>
-    <div class="advice-modal-content-text">
-      Asegúrese de que el área esté bien ventilada. Use ropa adecuada, guantes y un barbijo cuando deba lijar. Asimismo, un barbijo también se recomienda cuando la aplicación de pinturas a base solvente se realiza en espacios confinados o si la ventilación es escasa.
-    </div>
-  </div>
-
-  <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle"><i class="fa fa-info-circle" aria-hidden="true"></i> Clima</h4>
-    <div class="advice-modal-content-text">
-      Los días cálidos y secos con poco rocío o escarcha resultan las mejores condiciones climáticas para pintar. Pintar, nunca debe llevarse a cabo bajo condiciones de humedad. La Calefacción y una buena ventilación interior ayuda al secado de la pintura interior durante el clima frío o una humedad elevada. Evite pintar cuando la temperatura este por debajo de 5 ºC o por encima de 40 ºC.
-    </div>
-  </div>
-</div>
