--- a/styles/less/company.less
+++ b/styles/less/company.less
@@ -1,13 +1,14 @@
 @import 'images.less';
 
 .company {
-  background-image: @company-background;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+//  background-image: @company-background;
+//  background-repeat: no-repeat;
+//  background-position: center;
+//  background-size: cover;
   min-height: 480px;
   padding: 48px 72px;
   width: 100%;
+  background-color: #40bed3;
 
   @media @small-screen {
     padding: 24px;
@@ -52,6 +53,6 @@
   color: @c_white;
   font-weight: 100;
   letter-spacing: 1px;
-  opacity: .6;
+  opacity: .9;
   margin: 12px 0;
 }
