--- a/styles/less/company.less
+++ b/styles/less/company.less
@@ -1,10 +1,6 @@
 @import 'images.less';
 
 .company {
-//  background-image: @company-background;
-//  background-repeat: no-repeat;
-//  background-position: center;
-//  background-size: cover;
   min-height: 480px;
   padding: 48px 72px;
   width: 100%;
@@ -32,6 +28,7 @@
 
   @media @small-screen {
     margin: 12px;
+    min-width: 90%;
   }
 
   .title {
