--- a/styles/less/inspiration.less
+++ b/styles/less/inspiration.less
@@ -12,7 +12,7 @@
   padding: 50px 0;
 
   @media @small-screen {
-    padding: 24px;
+    padding: 10px 0;
   }
 
   .title {
@@ -59,9 +59,8 @@
   padding: 40px;
   min-width: 300px;
   text-align: center;
-
   @media @small-screen {
-    margin: 12px;
+    margin: 12px 0;
     padding: 12px;
   }
 }
