--- a/styles/less/products.less
+++ b/styles/less/products.less
@@ -38,8 +38,7 @@ font-size: 12px;}
   width: 350px;
 
   @media @small-screen {
-    height: 220px;
-    width: 280px;
+    width: 90%;
   }
 
   &:hover {
