--- a/styles/less/company.less
+++ b/styles/less/company.less
@@ -16,6 +16,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  @media @small-screen {
+    display: block;
+  }
 }
 
 .company-box {
