--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -21,6 +21,9 @@
   .layout {
     display: flex;
     flex-wrap: wrap;
+    @media @small-screen {
+      display: none;
+    }
   }
 }
 .titlewithline {
@@ -56,7 +59,7 @@
   flex-grow: 1;
 
   @media @small-screen {
-    height: 200px;
+    height: 160px;
     margin: 0;
   }
 }
