--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -22,7 +22,7 @@
     display: flex;
     flex-wrap: wrap;
     @media @small-screen {
-      display: none;
+      display: block;
     }
   }
 }
@@ -57,6 +57,9 @@
   margin: 12px 0;
   min-width: 50%;
   flex-grow: 1;
+  @media @medium-screen {
+    margin-top: -40px;
+  }
 
   @media @small-screen {
     height: 160px;
