--- a/styles/less/products.less
+++ b/styles/less/products.less
@@ -209,9 +209,10 @@ font-size: 12px;}
 
   @media @small-screen {
     font-size: 12px;
-    margin: 6px;
+    margin: 6px 0;
     padding: 12px 6px;
-    flex-grow: 1;
+    flex:none;
+    width: 100%;
   }
 
   &:hover {
