--- a/app/views/modal-templates/contacto-1.html
+++ b/app/views/modal-templates/contacto-1.html
@@ -16,7 +16,7 @@
         <input type="text" ng-model="data.message" required>
         <span class="highlight"></span>
         <span class="bar"></span>
-        <label>Escribe un mensaje corto</label>
+        <label>Escribe un mensaje</label>
       </div>
           <button class="liter-calculator-button">Enviar tu consulta</button>
 
